Fixed broken Nasdaq Omx Nordic provider